2015-03-29: new background colour for 3.8
2015-03-29: make caching consistent, add cache to inv_solve and fwd_solve
2015-03-29: make EIDORS more verbose: default log_level = 3
2015-03-29: new ng_mk_common_models as common interface to newer netgen code
2015-03-26: change default GREIT desired image function to 
            GREIT_desired_img_sigmoid. This can handle 3D rec_models
2015-03-24: add progress_msg
2015-03-24: speed up linear_reorder
2015-03-09: analytic c2f for grid models (mk_grid_c2f)
2015-02-18: point_in_traingle test
2015-02-18: utility to derive non-equalities defining a tetrahedron
2014-11-24: allow specifying J, R, RtR, JiRtrRJt and system_mat directly
2014-05-03: add per-m-file control to eidors_msg
2013-08-15: change interpretation of fwd_model.electrode.z_contact from
            ohm/m^2 to ohm in system_mat_fields
2013-08-15: inv_solve calculates the error
2013-08-15: mk_pixel_slice calculates mat_idx
2013-08-08: add lamb_newborn to shape_library and mk_library_model
2013-06-20: scale solution to fit data in inv_solve_diff_GN_one_step
2013-06-20: inv_solve reports solution error by default
2013-06-12: calculate mesh quality (calc_mesh_quality)
2013-06-11: dramatic speedup of show_fem for 3D meshes
2013-06-07: various improvements to place_elec_on_surf
2013-06-06: global managment of debug flags (eidors_debug)
2013-06-03: allow specifying command line options for gmsh
2013-05-29: ======================= RELEASE 3.7.1 ========================
2013-05-26: add anti-aliasing to print_convert
2013-05-18: refactor mk_GREIT_model to use mk_pixel_slice
2013-05-16: new print_convert that doesn't use external tools (imagemagick)
2013-05-16: improve gmsh interface 
2013-05-16: allow spaces in path to netgen
2013-05-05: fix compatibility with older Matlab and Windows
2013-04-25: citeme tool to request citations for specific functions
2013-04-22: ======================== RELEASE 3.7 =========================
2013-04-22: fminsearch for Octave